# colorutils

./: .gitignore  README.md  pyproject.toml
.codegraph/: daemon.pid
src/colorutils/: __init__.py  app.py  effects.py  lospec.py  models.py  processor.py
tests/: test_processor.py
