[project]
name = "colorutils"
version = "0.1.0"
description = "Lospec palette browser and image palette mapper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "requests>=2.31",
]

[project.scripts]
colorutils = "colorutils.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

